<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".rateActivity">

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="8"
        android:gravity="center"
        android:hint="@string/input"
        android:inputType="textPersonName"
        android:textSize="20dp"
        android:text="@string/edittext" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:gravity="center"
        android:text="@string/text" />

    <Button
        android:id="@+id/dollar"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/dollar" />

    <Button
        android:id="@+id/euro"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:onClick="onClick"
        android:text="@string/euro" />

    <Button
        android:id="@+id/won"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/won" />

    <Button
        android:id="@+id/btn_opencfg"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/config"
        android:onClick="openOne"/>
</LinearLayout>